# accelerator_practice

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: ci.yml
bigquery/: README.md  justfile  main.py  pyproject.toml  report.txt
bigquery/src/bigquery/: __init__.py  analyze.py  connection.py  format.py  seed.py  test_schema.py
bigquery/tests/: test_bigquery.py
click_prac/: justfile  main.py  pyproject.toml
datafaker/: database.sqlite  main.py  pyproject.toml
synth_data/: .env.example  KNOWN_ISSUES.md  README.md  justfile  main.py  pyproject.toml
synth_data/.github/workflows/: ci.yml
synth_data/lib/: __init__.py  bigquery.py  common.py  db.py  fk.py  format.py  log.py  matching.py  protocol.py  teradata.py  test_schema.py
synth_data/schemas/: schema_1.json  schema_2.json  schema_loader.py
synth_data/src/: __init__.py  __main__.py  bigquery.py  fk.py  format.py  log.py  main.py  matching.py  protocol.py  teradata.py  test_schema.py  test_schema_2.py
synth_data/src/adapters/: __init__.py
synth_data/src/adapters/cli/: __init__.py  app.py
synth_data/src/adapters/database/: __init__.py  bigquery.py  teradata.py
synth_data/src/adapters/generator/: __init__.py  faker.py
synth_data/src/adapters/output/: __init__.py  console.py
synth_data/src/domain/: __init__.py  fk.py  matching.py  ports.py
synth_data/src/infrastructure/: __init__.py  config.py  logging.py  settings.py
synth_data/tests/: conftest.py  matching.py  schema.py  test_main.py  test_matching.py  test_schema_defs.py  test_synth_data.py  test_topo_sort.py
teradata/: build_data_dictionary.py  main.py  pyproject.toml
teradata/data_dictionary/: __main__.py  build.py  constants.py  loaders.py  transforms.py
teradata/schema/prod/: tables_summary.csv
teradata/synthetic/: __main__.py  factories.py  generator.py  models.py  types.py
teraremote/: justfile  main.py  pyproject.toml  report.txt
teraremote/src/teraremote/: __init__.py  analyze.py  connection.py  format.py  seed.py  test_schema.py
teraremote/tests/: test_teraremote.py
xml/: MAP_After_Test_3.xml  MAP_before_Test_3.xml  after_output.csv  before_output.csv  main.py  models.py  pyproject.toml
xml/output/after/: DwgExportSummary.csv  SnpDeploySpec.csv  SnpExecUnit.csv  SnpExecUnitGrp.csv  SnpFKXRef.csv  SnpMapAttr.csv  SnpMapComp.csv  SnpMapConn.csv  SnpMapCp.csv  SnpMapExpr.csv  SnpMapExprRef.csv  SnpMapProp.csv  SnpMapRef.csv  SnpMapping.csv  SnpPhyExpr.csv  SnpPhyNode.csv
xml/output/before/: DwgExportSummary.csv  SnpFKXRef.csv  SnpMapAttr.csv  SnpMapComp.csv  SnpMapCp.csv  SnpMapExpr.csv  SnpMapExprRef.csv  SnpMapProp.csv  SnpMapRef.csv  SnpMapping.csv
