[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigquery"
version = "0.1.0"
description = "Connect to Google BigQuery, analyse datasets, and generate test data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.28.1",
    "google-cloud-bigquery>=3.25.0",
]

[project.scripts]
bigquery = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bigquery"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
