[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigquery"
version = "0.1.0"
description = "Connect to Google BigQuery, analyse datasets, and generate test data."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "ADG"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
keywords = ["bigquery", "gcp", "synthetic-data", "testing"]
dependencies = [
    "faker>=40.28.1",
    "google-cloud-bigquery>=3.25.0",
    "rich>=13.0.0",
]

[project.scripts]
bigquery = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bigquery"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-rich>=0.2.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --rich"
